[package]
name = "socket_server"
version = "0.1.0"
edition = "2021"

[lib]
path = "mod.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hyper = { version = "1", features = ["full"] }
tokio = { version = "1", features = ["full"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }
hyper-tungstenite = "0.13"
futures = "0.3"
tungstenite = "0.21"
erased-serde = "0.4"
url = "2.5.0"
thiserror = "1.0.56"
uuid = "1"
tokio-tungstenite = "0.21.0"
form_urlencoded = "1.2.1"
error-stack = "0.4"
pretty_assertions = "1"
